--- a/pages/examples/index.html
+++ b/pages/examples/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<meta charset="utf-8">
-	<link rel="icon" type="image/png" href="favicon.png">
-
-	<!-- Styles -->
+		<!-- Styles -->
 	<link href="../page.css" rel="stylesheet"/>
 
 </head>
-<body style='background:none;'>
+<body style="overflow-y: scroll; overflow-x: hidden;">
 	<div id="examples">
 		Here a link to NOCX example page and csv github repository?
 	</div>
