--- a/pages/howto.html
+++ b/pages/howto.html
@@ -6,8 +6,7 @@
 	<link href="page.css" rel="stylesheet"/>
 </head>
 <body style="overflow-y: scroll; overflow-x: hidden;">
-Solving real hard problems starts with creating <i>Causal Loop Diagrams</i>. <br><br>Do it alone, or with your team.<br>
-Evaluate, discuss and rethink your diagram! <br>To solve problems you need to understand the <i>real</i>problem cause.<br><br>
+Solving problems starts with creating <i>Causal Loop Diagrams</i>.Alone, or with a team.<br><br> Evaluate, discuss and rethink your diagram! CLD's are perfect for explaining and determing complex cause-effect relations. Use this tool to create video's (animated gifs) or interactive blog posts! To solve problems you need to understand the <i>real</i>problem cause.<br><br> 
 If your are finished with your CLD, you can start using InsightMaker or other system dynamic simulation tools for exploring the non-lineair loops more in depth. <br><br> If you need help, do not hesitate to <a target="_blank" href="https://nocomplexity.com/contact-us/">contact us!</a><br>Regards, Maikel Mardjan<br>
 </body>
 </html>
